# claude-vm

./: .claude-vm.toml  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  DISTRIBUTION.md  DISTRIBUTION_QUICK_START.md  LICENSE  README.md  REVIEW_ANALYSIS.md  SUMMARY.md  TEST_PLAN_NETWORK_SECURITY.md  TILDE_EXPANSION_FIX.md  build.rs  claude-vm  install.sh
.cargo/: config.toml
.claude/: PR_MESSAGE.md  git-capability-review.md  settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
agents/claude/: agent.toml  authenticate.sh  deploy.sh  install.sh
agents/opencode/: agent.toml  deploy.sh  install.sh
capabilities/: README.md
capabilities/chromium/: capability.toml
capabilities/docker/: capability.toml
capabilities/gh/: capability.toml  vm_runtime.sh  vm_setup.sh
capabilities/git/: capability.toml  host_setup.sh
capabilities/gpg/: capability.toml  host_setup.sh  vm_setup.sh
capabilities/network-isolation/: SECURITY.md  capability.toml  vm_runtime.sh  vm_setup.sh
capabilities/network-security/: SECURITY.md  capability.toml  host_setup.sh  vm_runtime.sh  vm_setup.sh
capabilities/node/: capability.toml
capabilities/notifications/: README.md  TESTING.md  capability.toml  host_setup.sh  send-notification.sh
capabilities/python/: capability.toml
capabilities/rust/: capability.toml
claude-vm-rust/: DEVELOPMENT.md  README.md
claude-vm-rust/scripts/: install_chromium.sh
claude-vm-rust/src/: config.rs  error.rs  project.rs
docs/: agent-forwarding.md  architecture.md  claude-integration.md  configuration.md  contributing.md  development.md  distribution.md  getting-started.md  git-integration.md  usage.md
docs/advanced/: custom-packages.md  troubleshooting.md
docs/features/: custom-mounts.md  network-isolation.md  network-security.md  runtime-scripts.md  templates.md  tools.md
examples/: .claude-vm.toml
scripts/: install_docker.sh  install_node.sh  install_python.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  phase_executor.rs  project.rs  update_check.rs  version.rs
src/agents/: mod.rs  (+3 more)
test/: README.md  test_helper.bash
tests/: TESTING_SUMMARY.md  test_agents.rs  test_bypass_domains.rs  test_capabilities.rs  test_cli_flag_filtering.rs  test_network_commands.rs  test_network_isolation_integration.rs  test_network_security_integration.rs  test_phase_scripts.rs  test_phase_scripts_vm.rs
(+74 files in other folders)
