[package]
name = "claude-vm"
version = "0.7.0"
edition = "2021"
authors = ["Claude VM Contributors"]
description = "Run Claude Code inside sandboxed Lima VMs"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "suggestions"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
md5 = "0.8"
which = "8.0"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
semver = "1.0"
indicatif = "0.18"
uzers = "0.12"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
serial_test = "3.2"
once_cell = "1.19"
regex = "1.11"

[profile.release]
strip = true
lto = true
codegen-units = 1
